--- a/Aula01/Views/Clientes/Editar.cshtml
+++ b/Aula01/Views/Clientes/Editar.cshtml
@@ -4,7 +4,7 @@
     <div class="offset-4 col-4">
         <div class="card">
             <div class="card-header">
-                Editar Cliente
+                Editar Produto
             </div>
             <div class="card-body">
 
@@ -16,8 +16,12 @@
                     <input type="text" name="Nome" class="form-control" value="@Model.Nome" />
                     <br />
 
-                    <label>Telefone</label>
-                    <input type="text" name="Telefone" class="form-control" value="@Model.Telefone" />
+                    <label>Valor</label>
+                    <input type="text" name="Valor" class="form-control" value="@Model.Valor" />
+                    <br />
+
+                    <label>Quantidade</label>
+                    <input type="text" name="Quantidade" class="form-control" value="@Model.Quantidade" />
                     <br />
                     <button type="submit" class="btn btn-success">
                         Enviar dados
