--- a/Aula01/Views/Clientes/Novo.cshtml
+++ b/Aula01/Views/Clientes/Novo.cshtml
@@ -4,7 +4,7 @@
     <div class="offset-4 col-4">
         <div class="card">
             <div class="card-header">
-                Cadastrar Cliente
+                Cadastrar Produto
             </div>
             <div class="card-body">
 
@@ -14,11 +14,16 @@
                     <input type="text" name="Nome" class="form-control"  />
                     <br />
 
-                    <label>Telefone</label>
-                    <input type="text" name="Telefone" class="form-control" />
+                    <label>Valor</label>
+                    <input type="number" name="Valor" class="form-control" />
                     <br />
+
+                    <label>Quantidade</label>
+                    <input type="number" name="Quantidade" class="form-control" />
+                    <br />
+
                     <button type="submit" class="btn btn-success">
-                        Enviar dados
+                        Cadastrar
                     </button>
                 </form>
             </div>
