--- a/Aula01/Views/Shared/_Layout.cshtml
+++ b/Aula01/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item" >
-                            <a href="/Home/MinhaTela" class="nav-link text-dark" >
-                                Minha Tela    
+                            <a href="/Clientes/Novo" class="nav-link text-dark" >
+                                Cadastro    
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="/Clientes/Lista" class="nav-link text-dark">
-                                Lista de clientes do arquivo
+                                Lista de Produtos
                             </a>
                         </li>
                     </ul>
